RESOLVED FIXED120423
[Qt] Option key combinations do not work in Input Elements.
https://bugs.webkit.org/show_bug.cgi?id=120423
Summary [Qt] Option key combinations do not work in Input Elements.
Zeno Albisser
Reported 2013-08-28 09:10:04 PDT
[Qt] Option key combinations do not work in Input Elements.
Attachments
Patch (1.46 KB, patch)
2013-08-28 09:11 PDT, Zeno Albisser
no flags
Zeno Albisser
Comment 1 2013-08-28 09:11:23 PDT
Zeno Albisser
Comment 2 2013-08-28 09:43:27 PDT
Comment on attachment 209893 [details] Patch Clearing flags on attachment: 209893 Committed r154752: <http://trac.webkit.org/changeset/154752>
Zeno Albisser
Comment 3 2013-08-28 09:43:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.