[Qt] Option key combinations do not work in Input Elements. https://bugs.webkit.org/show_bug.cgi?id=120423

Q_WS_MAC is obsolete. We should use Q_OS_MAC instead.
This caused QTBUG-32388.

Reviewed by Darin Adler.

* WebCoreSupport/EditorClientQt.cpp:
(WebCore::EditorClientQt::handleKeyboardEvent):

Canonical link: https://commits.webkit.org/138392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154752 268f45cc-cd09-0410-ab3c-d52691b4dbfc